fixed color contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -14,6 +14,7 @@ header {
     display: block;
     text-align: center;
     background-color: #66A5AD;
+    
 }
 
 header,
@@ -30,13 +31,15 @@ h1 {
 }
 
 nav {
-    background-color: #3a5f64;
+    background-color: #325458;
     margin: 0 auto;
     max-width: 1000px;
 }
 
 nav ul {
     list-style-type: none;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 600;
 }
 
 nav a {
@@ -112,11 +115,12 @@ main {
     list-style-type: none;
     padding-top: 20%;
     text-align: center;
-
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 600;
 }
 
 .list a {
-    color: #0055a5;
+    color: #012a50;
     text-decoration: none;
 }
 
